--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,18 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true">
-        <activity android:name=".MainActivity"
-            android:theme="@android:style/Theme.NoDisplay">
+        android:supportsRtl="true"
+        android:theme="@android:style/Theme.NoDisplay">
+        <activity
+            android:name=".ScreenHaze">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name=".HazeService" android:process=":remote"></service>
     </application>
 
 </manifest>
